compiler/toc_hir_lowering/tests/snapshots/lowering__lower_real_literal-10.snap
---
source: compiler/toc_hir_lowering/tests/lowering.rs
expression: "a := 1e600"

---
Library@(dummy)
  Root@(dummy): FileId(1) -> ItemId(0)
    Module@(FileId(1), 0..10): "<root>"@(dummy)
      StmtBody@(FileId(1), 0..10): []
        Assign@(FileId(1), 0..10)
          Name@(FileId(1), 0..1): "a"@(FileId(1), 0..1), undeclared
          Literal@(FileId(1), 5..10): Real(0.0)
error in file FileId(1) at 5..10: real literal is too large

