compiler/toc_hir_lowering/tests/snapshots/lowering__lower_real_literal-11.snap
---
source: compiler/toc_hir_lowering/tests/lowering.rs
expression: "a := 1.0e600"

---
Library@(dummy)
  Root@(dummy): FileId(1) -> ItemId(0)
    Module@(FileId(1), 0..12): "<root>"@(dummy)
      StmtBody@(FileId(1), 0..12): []
        Assign@(FileId(1), 0..12): None
          Name@(FileId(1), 0..1): "a"@(FileId(1), 0..1), undeclared
          Literal@(FileId(1), 5..12): Real(0.0)
error in file FileId(1) at 5..12: real literal is too large

