compiler/toc_hir_lowering/tests/snapshots/lowering__lower_real_literal-13.snap
---
source: compiler/toc_hir_lowering/tests/lowering.rs
expression: "a := 1.0e-999999999"

---
Library@(dummy)
  Root@(dummy): FileId(1) -> ItemId(0)
    Module@(FileId(1), 0..19): "<root>"@(dummy)
      StmtBody@(FileId(1), 0..19): []
        Assign@(FileId(1), 0..19): None
          Name@(FileId(1), 0..1): "a"@(FileId(1), 0..1), undeclared
          Literal@(FileId(1), 5..19): Real(0.0)

